examples/kubernetes/multi-network/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portail
  namespace: portail-system
  labels:
    app: portail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portail
  template:
    metadata:
      labels:
        app: portail
      annotations:
        k8s.v1.cni.cncf.io/networks: udn-frontend, udn-backend
    spec:
      serviceAccountName: portail-controller
      containers:
      - name: portail
        image: ghcr.io/epheo/portail:latest
        args: ["--kubernetes"]
