examples/kubernetes/multi-network/gateway-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-frontend
spec:
  gatewayClassName: portail
  addresses:
  - type: IPAddress
    value: "10.10.1.1"  # Portail's IP on udn-frontend
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: tcp
    port: 443
    protocol: TCP
